READE ME docs updated and number of character api added
