# src/routes/fileParser.js
@@ -2,7 +2,7 @@ const express = require("express");
 const router = express.Router();
 const {
   getNumberOfWords,
-  getNumberOfLines,
+  getNumberOfCharacters,
   getLongestWord,
   getNumberOfSentence,
   getNumberOfParagraphs,
@@ -10,7 +10,7 @@ const {
 const withErrorHandler = require("../helpers/controllerErrorHandler");
 
 router.get("/number-of-words", withErrorHandler(getNumberOfWords));
-router.get("/number-of-lines", withErrorHandler(getNumberOfLines));
+router.get("/number-of-characters", withErrorHandler(getNumberOfCharacters));
 router.get("/longest-words", withErrorHandler(getLongestWord));
 router.get("/number-of-sentences", withErrorHandler(getNumberOfSentence));
 router.get("/number-of-paragraph", withErrorHandler(getNumberOfParagraphs));
